--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ro">
 <head>
   <meta charset="UTF-8">
-  <title>Alma Explore - Agenție de turism</title>
+  <title>Alma Explore</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #eef2f3;
+      background-color: #f2f6f9;
       color: #333;
       text-align: center;
     }
@@ -29,32 +29,41 @@
       text-decoration: underline;
     }
 
+    main {
+      padding: 60px 20px;
+    }
+
     h1 {
       font-size: 48px;
-      margin-top: 40px;
       color: #0077cc;
+      margin-bottom: 20px;
     }
 
     p {
       font-size: 20px;
       max-width: 600px;
-      margin: 20px auto;
+      margin: 10px auto;
     }
 
-    .btn-contact {
-      display: inline-block;
+    .contact {
       margin-top: 30px;
-      padding: 12px 25px;
+      font-weight: bold;
       font-size: 18px;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 24px;
       background-color: #0077cc;
       color: white;
-      border: none;
-      border-radius: 5px;
       text-decoration: none;
-      transition: background 0.3s;
+      border-radius: 5px;
+      font-size: 16px;
+      transition: background 0.3s ease;
     }
 
-    .btn-contact:hover {
+    .btn:hover {
       background-color: #005fa3;
     }
 
@@ -66,6 +75,7 @@
   </style>
 </head>
 <body>
+
   <header>
     <nav>
       <a href="#">Home</a>
@@ -76,13 +86,15 @@
 
   <main>
     <h1>Alma Explore</h1>
-    <p>Descoperă lumea alături de noi! 🌍 Oferim vacanțe personalizate și experiențe unice, adaptate nevoilor tale.</p>
-    <p>Fie că vrei mare, munte sau city break, te ajutăm să alegi perfectul.</p>
-    <a href="mailto:contact@almaexplore.ro" class="btn-contact">Contactează-ne</a>
+    <p>Descoperă lumea cu noi! 🌍</p>
+    <p>Vacanțe personalizate, oferte speciale și experiențe de neuitat.</p>
+    <p class="contact">Contactează-ne: <a href="mailto:contact@almaexplore.ro">contact@almaexplore.ro</a></p>
+    <a href="mailto:contact@almaexplore.ro" class="btn">Trimite un email</a>
   </main>
 
   <footer>
     <p>&copy; 2025 Alma Explore. Toate drepturile rezervate.</p>
   </footer>
+
 </body>
 </html>
