--- a/index.html
+++ b/index.html
@@ -4,24 +4,51 @@
   <meta charset="UTF-8">
   <title>Alma Explore</title>
   <style>
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f2f6f9;
+      background-color: #f0f4f8;
       color: #333;
-      text-align: center;
+      line-height: 1.6;
     }
 
     header {
-      background-color: #0077cc;
-      padding: 20px 0;
+      background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e');
+      background-size: cover;
+      background-position: center;
+      height: 350px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       color: white;
+      text-shadow: 1px 1px 5px #000;
+    }
+
+    header h1 {
+      font-size: 48px;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 20px;
+    }
+
+    nav {
+      background-color: #0077cc;
+      padding: 15px;
+      text-align: center;
     }
 
     nav a {
+      color: white;
       margin: 0 15px;
       text-decoration: none;
-      color: white;
       font-weight: bold;
     }
 
@@ -29,36 +56,30 @@
       text-decoration: underline;
     }
 
-    main {
-      padding: 60px 20px;
+    .section {
+      padding: 50px 20px;
+      text-align: center;
     }
 
-    h1 {
-      font-size: 48px;
-      color: #0077cc;
+    .section h2 {
+      font-size: 32px;
       margin-bottom: 20px;
+      color: #0077cc;
     }
 
-    p {
-      font-size: 20px;
-      max-width: 600px;
-      margin: 10px auto;
-    }
-
-    .contact {
-      margin-top: 30px;
-      font-weight: bold;
+    .section p {
+      max-width: 700px;
+      margin: 0 auto 30px;
       font-size: 18px;
     }
 
     .btn {
       display: inline-block;
-      margin-top: 20px;
       padding: 12px 24px;
       background-color: #0077cc;
       color: white;
-      text-decoration: none;
       border-radius: 5px;
+      text-decoration: none;
       font-size: 16px;
       transition: background 0.3s ease;
     }
@@ -68,29 +89,97 @@
     }
 
     footer {
-      margin-top: 50px;
+      text-align: center;
+      padding: 20px;
+      background-color: #f0f0f0;
       font-size: 14px;
-      color: #777;
+      color: #555;
+    }
+
+    .destinatii {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .card {
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      width: 250px;
+      overflow: hidden;
+      text-align: left;
+    }
+
+    .card img {
+      width: 100%;
+      height: 150px;
+      object-fit: cover;
+    }
+
+    .card div {
+      padding: 15px;
+    }
+
+    .card h3 {
+      margin-bottom: 10px;
+      color: #0077cc;
+    }
+
+    .card p {
+      font-size: 14px;
+      color: #555;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Despre</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
-
-  <main>
     <h1>Alma Explore</h1>
     <p>Descoperă lumea cu noi! 🌍</p>
-    <p>Vacanțe personalizate, oferte speciale și experiențe de neuitat.</p>
-    <p class="contact">Contactează-ne: <a href="mailto:contact@almaexplore.ro">contact@almaexplore.ro</a></p>
-    <a href="mailto:contact@almaexplore.ro" class="btn">Trimite un email</a>
-  </main>
+  </header>
+
+  <nav>
+    <a href="#">Acasă</a>
+    <a href="#">Despre</a>
+    <a href="#">Oferte</a>
+    <a href="#">Contact</a>
+  </nav>
+
+  <section class="section">
+    <h2>Vacanțe personalizate</h2>
+    <p>Oferim experiențe de neuitat, adaptate nevoilor tale. Fie că vrei mare, munte sau city break, Alma Explore este partenerul ideal pentru vacanța ta.</p>
+    <a href="mailto:contact@almaexplore.ro" class="btn">Contactează-ne</a>
+  </section>
+
+  <section class="section">
+    <h2>Destinații Populare</h2>
+    <div class="destinatii">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="Plajă tropicală">
+        <div>
+          <h3>Maldivelor</h3>
+          <p>Relaxare absolută pe plaje cu nisip alb și ape turcoaz.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1505765050516-f72dcac9c60b" alt="Munți">
+        <div>
+          <h3>Elveția</h3>
+          <p>Peisaje montane spectaculoase și aer curat de Alpi.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1491553895911-0055eca6402d" alt="Oraș european">
+        <div>
+          <h3>Paris</h3>
+          <p>Orașul iubirii te așteaptă cu muzee, artă și croissante.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <footer>
     <p>&copy; 2025 Alma Explore. Toate drepturile rezervate.</p>
